<resources>
    <string name="app_name">F.S.R.L</string>

    <!-- TODO: Remover o cambiar  -->
    <string name="welcome">Bienvenid@: </string>
    <string name="etUsuario">Usuario</string>
    <string name="etPassword">Password</string>
    <string name="aviso1">Por favor ingrese su Usuario y Contraseña </string>
    <string name="aviso2">Ingrese su Usuario y Contraseña correctamente</string>

    <string name="nav_drawer_open">Drawer Abierto</string>
    <string name="nav_drawer_close">Drawer Cerrado</string>
    <string name="menuPreventa">Pre Venta</string>
    <string name="menuMetas">Metas</string>
    <string name="menuCSesion">Cerrar Sesión</string>

    <string name="fragPreventa">Pre Venta!!</string>
    <string name="fragMetas">Metas!!</string>

    <string name="lblClients">Clientes</string>
    <string name="lblMap">Mapa</string>

    <string name="lbl_usuario">Ingrese su Usuario</string>
    <string name="lbl_password">Ingrese su contraseña</string>

    <string name="lbl_login">Iniciar Sesión</string>
    <string name="lbl_logout">Cerrar Sesión</string>

    <string name="titulo_tab_Cliente">CLIENTE</string>
    <string name="titulo_tab_Mapa">MAPA</string>
    <string name="titulo_tab_Producto">PRODUCTO</string>
    <string name="menuConfiguracion">Configuración</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_click">Click</string>


    ///////////////////////////////////////////////
    <string name="titulo_actividad_preventa">Preventa</string>
    ///////////////////////////////////////////////
    <string name="titulo_actividad_metas">Metas</string>
    ///////////////////////////////////////////////
    <string name="titulo_actividad_mapa">Mapa</string>
    ///////////////////////////////////////////////
    <string name="titulo_actividad_rutas">Rutas</string>
    /////////////////////////////////////////////
    <string name="btnDiAceptar">Aceptar</string>
    <string name="btnDiCancelar">Cancelar</string>
    <string name="cSesionMsj">¿Quiere finalizar la Sesión?</string>
    <string name="aviso3">AVISO</string>
    <string name="aviso3_c">¿Usted desea Cerrar Sesion?</string>
    ////////////////////////////////////////////
    <string name="registro_de_usuarios">REGISTRO DE USUARIOS</string>
    <string name="txt_id">Ingrese el id</string>
    <string name="txt_nombre">Ingrese el nombre</string>
    <string name="txt_apellido">Ingrese los apellidos</string>
    <string name="txt_nit">Ingrese el NIT</string>
    <string name="txt_telefono">Ingrese el telefono</string>
    <string name="txtId">ID:</string>
    <string name="txtNom">Nombre:</string>
    <string name="txtApe">Apellidos:</string>
    <string name="txtNit">NIT:</string>
    <string name="txtTelef">Telefono:</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="lista_cliente">Lista de Cliente</string>
    <string name="lista_producto">Lista de Producto</string>
    <string name="cmb_opcion">Seleccione una Opción</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="menuMapa">Mapa</string>
    <string name="txt_nombrePro">Nombre del Producto</string>
    <string name="txt_detallePro">Detalle del Producto</string>
    <string name="txt_cantidadPro">Cantidad del Producto</string>
    <string name="txt_stockPro">Stock del Producto</string>


</resources>