<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_preventa"
            android:title="@string/menuPreventa"
            android:icon="@mipmap/ic_carrito_vent"/>
        <item
            android:id="@+id/nav_metas"
            android:title="@string/menuMetas"
            android:icon="@mipmap/ic_metas"/>
        <item
            android:id="@+id/nav_mapa"
            android:title="@string/menuMapa"
            android:icon="@mipmap/ic_mapa"
            />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_configuracion"
            android:title="@string/menuConfiguracion"
            android:icon="@mipmap/ic_configuracion"/>
        <item
            android:id="@+id/nav_csesion"
            android:title="@string/menuCSesion"
            android:icon="@mipmap/ic_csesion"/>
    </group>
</menu>