<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_consultar_usuarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.ProductoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/cIdP"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:hint="@string/txt_id"
            android:layout_weight="0.93"  />

        <Button
            android:id="@+id/btnConsultarP"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_buscar" />

    </LinearLayout>

    <EditText
        android:id="@+id/campoNombreProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_nombrePro"/>

    <EditText
        android:id="@+id/campoDetalleProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_detallePro"/>

    <EditText
        android:id="@+id/campoCantidadProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_cantidadPro"/>

    <EditText
        android:id="@+id/campoStockProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_stockPro"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">

        <Button
            android:id="@+id/btnEliminarP"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:text="@string/btn_eliminar"
            android:textSize="12dp"
            />

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            />

        <Button
            android:id="@+id/btnActualizarP"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:text="@string/btn_actualizar"
            android:textSize="11dp"
            />

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            />

        <Button
            android:id="@+id/btnRegistrarP"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:text="@string/btn_registrar"
            android:textSize="12dp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewProducto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_margin"/>
</LinearLayout>
