<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/color_nav_bar">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:drawableStartCompat="@mipmap/ic_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etUsuario"
        android:paddingTop="@dimen/nav_vertical_margin"
        android:paddingBottom="@dimen/nav_vertical_margin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="@+id/header_title"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etPassword"
        android:paddingTop="@dimen/nav_vertical_margin"
        android:paddingBottom="@dimen/nav_vertical_margin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="@+id/header_title"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />


</androidx.constraintlayout.widget.ConstraintLayout>