<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imagen_user"
            android:layout_height="@dimen/imagen_size"
            android:layout_width="@dimen/imagen_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_user"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:boxBackgroundColor="@color/background_general">

            <EditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/lbl_usuario"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lineSpacingExtra="8sp"
                android:padding="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:boxBackgroundColor="@color/background_general"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:hint="@string/lbl_password"
                android:inputType="textPassword"
                android:lineSpacingExtra="8sp"
                android:padding="20dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_login"
            />

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />
    </LinearLayout>
</RelativeLayout>